Fix issue with card footers not aligned

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,8 +94,14 @@ width: 100%;
     background-color: #fafafa;
     display:flex;
 }
+.card-body{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
 .card-content{
-    flex: stretch;
+  align-self: stretch;
+  height: 100%;
 }
 
 .card-container{
@@ -109,8 +115,12 @@ width: 100%;
 }
 .card-footer{
     background-color: #fafafa;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
+    margin-top: 10px;
+    min-height: 80px;
+    padding-bottom: 5px;
 }
+
 
 
 
